--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <h3>Hecho con 🤍 en Academlo</h3>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./assets/js/js.js"></script>
+    <script src="./Carrito/assets/js/js.js"></script>
 </body>
 </html>
