--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./Carrito/assets/style/style.css">
     <script src="https://kit.fontawesome.com/b22286fea9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-
+     <link rel="icon" href="./Carrito/assets/img/zanahoria.png">
     <title>Academlo Store</title>
 </head>
 <body>
     <nav>
-        <img src="./assets/img/logo_nombre.png" alt="">
+        <img src="./Carrito/assets/img/logo_nombre.png" alt="">
         <button class="car__toggle">
             <i class="fa-solid fa-cart-shopping"></i>
         </button>
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <header>
-        <img src="./assets/img/logo blanco.png" alt="">
+        <img src="./Carrito/assets/img/logo blanco.png" alt="">
     </header>
     <main>
         <h3>Todos nuestros productos</h3>
